--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<title th:text="${titulo}">Adrian´s page</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
+<head th:replace="layout/layout :: head"></head>
 
-</head>
 <body>
+
+	<header th:replace="layout/layout :: header"></header>
 
 	<div class="container py-4">
 
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-	<a th:href="@{/signup}">Crear usuario</a>
+				<a th:href="@{/signup}">Crear usuario</a>
 				<table class="table table-striped table-bordered">
 					<thead class="thead-inverse">
 						<tr>
@@ -26,6 +21,8 @@
 							<th>email</th>
 							<th>contraseña</th>
 							<th>fecha</th>
+							<th>editar</th>
+							<th>eliminar</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -37,14 +34,22 @@
 							<td th:text="${usuario.email}"></td>
 							<td th:text="${usuario.password}"></td>
 							<td th:text="${usuario.createAt}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/signup/} + ${usuario.id}" th:text="'editar'"></a></td>
+							<td><a class="btn btn-danger btn-xs"
+								th:href="@{/eliminar/} + ${usuario.id}" th:text="'eliminar'"
+								onclick="return confirm('Estas seguro que quieres eliminar');"></a></td>
 						</tr>
 					</tbody>
 
 				</table>
+				<nav th:replace="paginator-nav :: paginator"></nav>
 			</div>
 		</div>
 
 
 	</div>
+
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
