--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<title th:text="${titulo}">Adrian´s page</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="https://getbootstrap.com/docs/4.1/examples/sign-in/signin.css">
+<head th:replace="layout/layout :: head"></head>
 
-</head>
 <body>
 
+	<header th:replace="layout/layout :: header"></header>
 
-	<form class="form-signin" th:action="@{/signup}" th:object="${usuario}"
-		method="post">
-		<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+	<div class="container">
+		<form class="form-signin" th:action="@{/signup}"
+			th:object="${usuario}" method="post">
+			<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 
-		<label for="nombre" class="sr-only">Nombre</label> <input type="text"
-			th:field="*{nombre}" id="nombre" class="form-control"
-			placeholder="Nombre" required autofocus /> <label for="apellido"
-			class="sr-only">Apellido</label> <input type="text"
-			th:field="*{apellido}" id="apellido" class="form-control"
-			placeholder="Apellido" required autofocus /> <label for="email"
-			class="sr-only">Email address</label> <input type="email"
-			th:field="*{email}" id="email" class="form-control"
-			placeholder="Email address" required autofocus /> <label
-			for="password" class="sr-only">Password</label> <input
-			type="password" th:field="*{password}" id="password"
-			class="form-control" placeholder="Password" required />
+			<label for="nombre" class="sr-only">Nombre</label> <input type="text"
+				th:field="*{nombre}" id="nombre" class="form-control"
+				placeholder="Nombre" required autofocus /> <label for="apellido"
+				class="sr-only">Apellido</label> <input type="text"
+				th:field="*{apellido}" id="apellido" class="form-control"
+				placeholder="Apellido" required autofocus /> <label for="email"
+				class="sr-only">Email address</label> <input type="email"
+				th:field="*{email}" id="email" class="form-control"
+				placeholder="Email address" required autofocus /> <label
+				for="password" class="sr-only">Password</label> <input
+				type="password" th:field="*{password}" id="password"
+				class="form-control" placeholder="Password" required />
 
 
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign
-			up</button>
-
-		<p class="mt-5 mb-3 text-muted">&copy; 2018</p>
-	</form>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign
+				up</button>
+		</form>
+	</div>
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
