--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -247,9 +247,9 @@
 			<div class="p-3">
 				<h4 class="font-italic">Elsewhere</h4>
 				<ol class="list-unstyled">
-					<li><a href="#">GitHub</a></li>
-					<li><a href="#">Twitter</a></li>
-					<li><a href="#">Facebook</a></li>
+					<li><a href="https://github.com/adriancice">GitHub</a></li>
+					<li><a href="https://twitter.com/cicemadrid">Twitter</a></li>
+					<li><a href="https://www.facebook.com/cicemadrid/">Facebook</a></li>
 				</ol>
 			</div>
 		</aside>
