--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -30,7 +30,9 @@
 						class="mx-3">
 							<circle cx="10.5" cy="10.5" r="7.5"></circle>
 							<line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
-				</a> <a class="btn btn-sm btn-outline-secondary" th:href="@{/signup}">Sign
+				</a> <a class="btn btn-sm btn-outline-secondary mr-2"
+					th:href="@{/signin}">Sign in</a> <a class="text">Or</a><a
+					class="btn btn-sm btn-outline-secondary ml-2" th:href="@{/signup}">Sign
 					up</a>
 			</div>
 		</div>
@@ -61,6 +63,20 @@
 			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script
 			src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<script>
+			var password = document.getElementById("password"), confirm_password = document
+					.getElementById("confirm_password");
+
+			function validatePassword() {
+				if (password.value != confirm_password.value) {
+					confirm_password.setCustomValidity("Passwords Don't Match");
+				} else {
+					confirm_password.setCustomValidity('');
+				}
+			}
+			password.onchange = validatePassword;
+			confirm_password.onkeyup = validatePassword;
+		</script>
 	</footer>
 
 </body>
